# palautusrepositorio

./: .gitignore  PULL.md  README.md  anotherfile.md  file3.md  newfile.md  retro.md
viikko1/nhl-statistics-1/src/: index.py  statistic.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: .gitignore  new-file.md  new-file2.txt  remote-repo-file.md  some-file-haara2.md  some-file.md
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: index.py  project_reader.py
viikko2/verkkokauppa-1/: class-diagrams.md
viikko2/verkkokauppa-1/src/: kauppa.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko5/: versionhallinta.md
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/: .gitignore
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kivipaperisakset.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  pelitehdas.py
(+1 files in other folders)
