[tool.poetry]
name = "web-sovellus"
version = "0.1.0"
description = "OhTu-kurssin harjoitus"
authors = ["Heidi Holappa <heidi.holappa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
